--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,24 @@
-name: Publish Docker image
+name: Publish Docker Image
 
 on:
   push:
-    branches: ['main']
+    branches:
+      - master
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
+  build-and-push:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3
-      
+        uses: actions/checkout@v3  # This checks out the repository code
+
       - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: thetips4you/testjodejsapp
-      
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Build Docker image
+        run: docker build -t harshan536/react-app .  # Change to your Docker Hub repo
+
+      - name: Push Docker image
+        run: docker push harshan536/react-app  # Change to your Docker Hub repo
