--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}"
 
-      - name: Build Docker image
+      - name: Build Docker
         run: docker build -t harshan536/job-portal-app . 
 
       - name: Push Docker image
