--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,11 +26,11 @@ jobs:
       - name: SSH into EC2 and Deploy
         uses: appleboy/ssh-action@v0.1.5
         with:
-          host: ${{ secrets.EC2_INSTANCE_IP }}
-          username: ubuntu  # Your EC2 instance username
-          key: ${{ secrets.SSH }}
+          host: ${{ secrets.EC2_INSTACNE_IP }}
+          username: ubuntu 
+          key: ${{ secrets.SSH_KEYS }}
           script: |
             sudo systemctl start docker
             docker pull ${{ secrets.DOCKER_USERNAME }}/react-app
             docker stop $(docker ps -q) || true
-            docker run -d --restart unless-stopped -p 80:80 ${{ secrets.DOCKER_USERNAME }}/react-app
+            docker run -d -p 3001:3000 ${{ secrets.DOCKER_USERNAME }}/react-app
