--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,13 +26,13 @@ jobs:
       - name: SSH into EC2 and Deploy
         uses: appleboy/ssh-action@v0.1.5
         with:
-          host: ${{ secrets.EC2_INSTANCE_IP }}  # Corrected secret name
+          host: ${{ secrets.EC2_INSTANCE_IP }} 
           username: ubuntu 
           key: ${{ secrets.SSH_KEYS }}
           script: |
-            sudo apt-get install -y docker.io  # Added -y to automate installation
-            sudo systemctl start docker          # Start Docker service if not running
-            sudo systemctl enable docker         # Enable Docker service to start on boot
+            sudo apt-get install -y docker.io 
+            sudo systemctl start docker         
+            sudo systemctl enable docker         
             docker pull harshan536/react-app
             docker stop $(docker ps -q) || true
-            docker run -d -p 3000:3000 harshan536/react-app  # Removed extra period
+            docker run -d -p 3000:3000 harshan536/react-app
