--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,18 +21,14 @@ jobs:
         run: docker build -t harshan536/react-app . 
 
       - name: Push Docker image
-        run: docker push harshan536/react-app  
-      
-      - name: SSH into EC2 and Deploy
-        uses: appleboy/ssh-action@v0.1.5
-        with:
-          host: ${{ secrets.EC2_INSTANCE_IP }} 
-          username: ubuntu 
-          key: ${{ secrets.SSH_KEYS }}
-          script: |
-            sudo apt-get install -y docker.io 
-            sudo systemctl start docker         
-            sudo systemctl enable docker         
-            docker pull harshan536/react-app
-            docker stop $(docker ps -q) || true
-            docker run -d -p 3000:3000 harshan536/react-app
+        run: docker push harshan536/react-app
+  deploy:
+    needs: build-and-push
+    runs-on: self-hosted
+    steps:
+      - name: Login to docker hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Pull image from docker hub
+        run: docker pull harshan536/react-app:latest 
+      - name: Run docker container
+        run: docker run -d -p 3000:3000 --name react-app-container harshan536/react-app 
